--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/App.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/App.xaml
@@ -2,7 +2,11 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:controls="clr-namespace:Neurotoxin.Godspeed.Presentation.Controls;assembly=Neurotoxin.Godspeed.Presentation"
-             xmlns:shell="clr-namespace:Microsoft.Windows.Shell;assembly=Microsoft.Windows.Shell">
+             xmlns:shell="clr-namespace:Microsoft.Windows.Shell;assembly=Microsoft.Windows.Shell"
+             xmlns:co="clr-namespace:Neurotoxin.Godspeed.Presentation.Converters;assembly=Neurotoxin.Godspeed.Presentation"
+             xmlns:system="clr-namespace:System;assembly=mscorlib"
+             xmlns:constants="clr-namespace:Neurotoxin.Godspeed.Shell.Constants"
+             xmlns:converters="clr-namespace:Neurotoxin.Godspeed.Shell.Converters">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -13,6 +17,22 @@
                     <SolidColorBrush x:Key="NormalBrush" Color="#FF808080" />
                     <SolidColorBrush x:Key="NormalBorderBrush" Color="#FF9B9999" />
                     <SolidColorBrush x:Key="DefaultedBorderBrush" Color="#FF9BB1C5" />
+
+                    <co:BoolToVisibilityConverter x:Key="BoolToVis"/>
+                    <co:NotNullOrEmptyConverter x:Key="NotNullOrEmptyConverter"/>
+                    <converters:SizeConverter x:Key="SizeConverter"/>
+                    <converters:SizeAlignmentConverter x:Key="SizeAlignmentConverter"/>
+                    <converters:TitleConverter x:Key="TitleConverter"/>
+                    <converters:NameConverter x:Key="NameConverter"/>
+                    <converters:PaneHeaderBackgroundConverter x:Key="PaneHeaderBackgroundConverter"
+                                                  ActivePaneBrush="{StaticResource DefaultedBorderBrush}"
+                                                  InactivePaneBrush="{StaticResource NormalBorderBrush}"/>
+                    <constants:ToggleSelectionMode x:Key="Insert">Insert</constants:ToggleSelectionMode>
+                    <constants:ToggleSelectionMode x:Key="Space">Space</constants:ToggleSelectionMode>
+                    <constants:ToggleSelectionMode x:Key="ShiftDown">ShiftDown</constants:ToggleSelectionMode>
+                    <constants:ToggleSelectionMode x:Key="ShiftUp">ShiftUp</constants:ToggleSelectionMode>
+                    <system:Boolean x:Key="False">False</system:Boolean>
+                    <system:Boolean x:Key="True">True</system:Boolean>
 
                     <!-- Window -->
                     <Style TargetType="{x:Type controls:BorderlessWindow}" x:Key="Window">
