--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FileListPane.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FileListPane.xaml
@@ -1,16 +1,40 @@
 ﻿<UserControl x:Class="Neurotoxin.Godspeed.Shell.Views.FileListPane"
-                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:e="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-                    xmlns:inf="clr-namespace:Neurotoxin.Godspeed.Presentation.Infrastructure;assembly=Neurotoxin.Godspeed.Presentation"
-                    xmlns:views="clr-namespace:Neurotoxin.Godspeed.Shell.Views"
-             xmlns:vc="clr-namespace:Neurotoxin.Godspeed.Shell.Views.Controls" Background="Transparent">
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:e="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+             xmlns:inf="clr-namespace:Neurotoxin.Godspeed.Presentation.Infrastructure;assembly=Neurotoxin.Godspeed.Presentation"
+             xmlns:views="clr-namespace:Neurotoxin.Godspeed.Shell.Views"
+             xmlns:vc="clr-namespace:Neurotoxin.Godspeed.Shell.Views.Controls"
+             xmlns:ts="clr-namespace:Neurotoxin.Godspeed.Shell.Views.TemplateSelectors" 
+             Background="Transparent">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Themes/WhistlerBlue.xaml"/>                
                 <ResourceDictionary>
                     <inf:BindingProxy x:Key="ViewModel" Data="{Binding}"/>
+                    <ts:CloseButtonsTemplateSelector x:Key="TemplateSelector">
+                        <ts:CloseButtonsTemplateSelector.DefaultTemplate>
+                            <DataTemplate>
+                                <StackPanel/>
+                            </DataTemplate>
+                        </ts:CloseButtonsTemplateSelector.DefaultTemplate>
+                        <ts:CloseButtonsTemplateSelector.FtpTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation="Horizontal">
+                                    <Button Content="Disconnect" Command="{Binding DisconnectCommand}" Margin="0,0,3,0" Width="75"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </ts:CloseButtonsTemplateSelector.FtpTemplate>
+                        <ts:CloseButtonsTemplateSelector.StfsTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation="Horizontal">
+                                    <Button Content="Save &and; Close" Command="{Binding SaveAndCloseCommand}" Margin="0,0,3,0" Width="100"/>
+                                    <Button Content="Close w/o saving" Command="{Binding CloseCommand}" Margin="0,0,3,0" Width="100"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </ts:CloseButtonsTemplateSelector.StfsTemplate>
+                    </ts:CloseButtonsTemplateSelector>
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
@@ -53,8 +77,9 @@
             <TextBlock Grid.Column="1" Text="{Binding DriveLabel}" FontWeight="Bold" VerticalAlignment="Center" Margin="0,0,5,0"/>
             <TextBlock Grid.Column="2" Text="{Binding FreeSpace}" VerticalAlignment="Center" 
                        Visibility="{Binding FreeSpace, Converter={StaticResource NotNullOrEmptyConverter}, FallbackValue=Collapsed}"/>
-            <Button Grid.Column="2" HorizontalAlignment="Right" Content="{Binding CloseButtonText}" Command="{Binding CloseCommand}" Margin="0,0,3,0" Width="75"
-                    Visibility="{Binding CloseCommand, Converter={StaticResource NotNullOrEmptyConverter}, FallbackValue=Collapsed}"/>
+            
+            <ContentControl Grid.Column="2" HorizontalAlignment="Right" Content="{Binding}"
+                            ContentTemplateSelector="{StaticResource TemplateSelector}"/>
         </Grid>
 
         <Border Grid.Row="1" Background="{Binding Path=IsActive, Converter={StaticResource PaneHeaderBackgroundConverter}}"
