--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FileListPane.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FileListPane.xaml
@@ -22,15 +22,15 @@
                         <ts:CloseButtonsTemplateSelector.FtpTemplate>
                             <DataTemplate>
                                 <StackPanel Orientation="Horizontal">
-                                    <Button Content="Disconnect" Command="{Binding DisconnectCommand}" Margin="0,0,3,0" Width="75"/>
+                                    <Button Content="Disconnect" Command="{Binding DisconnectCommand}" Width="75"/>
                                 </StackPanel>
                             </DataTemplate>
                         </ts:CloseButtonsTemplateSelector.FtpTemplate>
                         <ts:CloseButtonsTemplateSelector.StfsTemplate>
                             <DataTemplate>
                                 <StackPanel Orientation="Horizontal">
-                                    <Button Content="Save &and; Close" Command="{Binding SaveAndCloseCommand}" Margin="0,0,3,0" Width="100"/>
-                                    <Button Content="Close w/o saving" Command="{Binding CloseCommand}" Margin="0,0,3,0" Width="100"/>
+                                    <Button Content="Save and Close" Command="{Binding SaveAndCloseCommand}" Margin="0,0,3,0" Width="100"/>
+                                    <Button Content="Close" Command="{Binding CloseCommand}" Width="60"/>
                                 </StackPanel>
                             </DataTemplate>
                         </ts:CloseButtonsTemplateSelector.StfsTemplate>
