Population performance tuning, title recognition bugfix, and other UX improvements

--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/App.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/App.xaml
@@ -42,10 +42,11 @@
                             </Setter.Value>
                         </Setter>
                         <Setter Property="Icon" Value="/Resources/icon.ico"/>
+                        <Setter Property="SnapsToDevicePixels" Value="True"/>
                         <Setter Property="Template">
                             <Setter.Value>
                                 <ControlTemplate TargetType="{x:Type controls:BorderlessWindow}">
-                                    <Border Background="{StaticResource ControlBackgroundBrush}">
+                                    <Border Background="{StaticResource ControlBackgroundBrush}" BorderThickness="1" BorderBrush="{StaticResource NormalBorderBrush}">
                                         <Grid x:Name="Head">
                                             <Grid.ColumnDefinitions>
                                                 <ColumnDefinition Width="Auto"/>
@@ -56,7 +57,7 @@
                                                 <RowDefinition Height="27" />
                                                 <RowDefinition Height="*"/>
                                             </Grid.RowDefinitions>
-
+                                            
                                             <Image Source="{TemplateBinding Icon}" Width="16" Height="16" Margin="10,3,5,3" DockPanel.Dock="Left"/>
                                             <TextBlock Text="{TemplateBinding Title}" Grid.Column="1" VerticalAlignment="Center" Foreground="White" FontWeight="Bold"/>
                                             <TextBlock Text="{TemplateBinding Title}" Grid.Column="1" VerticalAlignment="Center" Margin="-1,-1,1,1" Foreground="{StaticResource NormalBrush}" FontWeight="Bold"/>
@@ -86,11 +87,17 @@
                             </Setter.Value>
                         </Setter>
                         <Setter Property="Icon" Value="/Resources/icon.ico"/>
+                        <Setter Property="SnapsToDevicePixels" Value="True"/>
+                        <Setter Property="AllowsTransparency" Value="True"/>
+                        <Setter Property="WindowStyle" Value="None"/>
                         <Setter Property="Template">
                             <Setter.Value>
                                 <ControlTemplate TargetType="{x:Type controls:DialogBase}">
                                     <AdornerDecorator>
-                                        <Border Background="{StaticResource ControlBackgroundBrush}">
+                                        <Border Background="{StaticResource ControlBackgroundBrush}" BorderThickness="1" BorderBrush="{StaticResource NormalBorderBrush}" Margin="5">
+                                            <Border.Effect>
+                                                <DropShadowEffect ShadowDepth="6" Direction="315" Opacity="0.35" BlurRadius="0"/>
+                                            </Border.Effect>
                                             <Grid>
                                                 <Grid.ColumnDefinitions>
                                                     <ColumnDefinition Width="Auto"/>
@@ -108,7 +115,8 @@
 
                                                 <controls:CaptionButtons Margin="0,0,5,0" Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right" Type="Close"
                                                                          Foreground="{DynamicResource CaptionButtonColor}" FontSize="14" MarginButton="0,0,5,0"
-                                                                         VerticalAlignment="Center" shell:WindowChrome.IsHitTestVisibleInChrome="True"/>
+                                                                         VerticalAlignment="Center" shell:WindowChrome.IsHitTestVisibleInChrome="True"
+                                                                         x:Name="CaptionButtons"/>
 
                                                 <ContentPresenter Margin="5" Grid.Row="1" Grid.ColumnSpan="3" Content="{TemplateBinding Content}"/>
                                             </Grid>
