--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Themes/WhistlerBlue.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Themes/WhistlerBlue.xaml
@@ -2567,7 +2567,7 @@
                                     <Path x:Name="GlyphPanelpath" VerticalAlignment="Center" Fill="{TemplateBinding Foreground}" Data="M0,2 L0,4.8 L2.5,7.4 L7.1,2.8 L7.1,0 L2.5,4.6 z" FlowDirection="LeftToRight"/>
                                 </Grid>
 
-                                <ContentPresenter Grid.Column="1" Margin="{TemplateBinding Padding}" x:Name="HeaderHost" RecognizesAccessKey="True" ContentSource="Header"/>
+                                <ContentPresenter Grid.Column="1" Margin="5,0,0,0" x:Name="HeaderHost" RecognizesAccessKey="True" ContentSource="Header"/>
 
                                 <Grid Grid.Column="3" Margin="4,0,6,0" x:Name="ArrowPanel" VerticalAlignment="Center">
                                     <Path x:Name="ArrowPanelPath" VerticalAlignment="Center" Fill="{TemplateBinding Foreground}" Data="M0,0 L0,8 L4,4 z"/>
