--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Themes/WhistlerBlue.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Themes/WhistlerBlue.xaml
@@ -2539,6 +2539,7 @@
             <Setter Property="VerticalContentAlignment" Value="{Binding Path=VerticalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
             <Setter Property="Background" Value="Transparent"/>
             <Setter Property="Foreground" Value="{StaticResource OutsideFontColor}"/>
+            <Setter Property="MinHeight" Value="24"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type MenuItem}">
@@ -2567,7 +2568,7 @@
                                     <Path x:Name="GlyphPanelpath" VerticalAlignment="Center" Fill="{TemplateBinding Foreground}" Data="M0,2 L0,4.8 L2.5,7.4 L7.1,2.8 L7.1,0 L2.5,4.6 z" FlowDirection="LeftToRight"/>
                                 </Grid>
 
-                                <ContentPresenter Grid.Column="1" Margin="5,0,0,0" x:Name="HeaderHost" RecognizesAccessKey="True" ContentSource="Header"/>
+                                <ContentPresenter Grid.Column="1" Margin="5,0,0,0" x:Name="HeaderHost" RecognizesAccessKey="True" ContentSource="Header" VerticalAlignment="Center"/>
 
                                 <Grid Grid.Column="3" Margin="4,0,6,0" x:Name="ArrowPanel" VerticalAlignment="Center">
                                     <Path x:Name="ArrowPanelPath" VerticalAlignment="Center" Fill="{TemplateBinding Foreground}" Data="M0,0 L0,8 L4,4 z"/>
