--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/TransferProgressDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/TransferProgressDialog.xaml
@@ -4,10 +4,10 @@
                            xmlns:converters="clr-namespace:Neurotoxin.Godspeed.Shell.Converters"
                            xmlns:dialogs="clr-namespace:Neurotoxin.Godspeed.Shell.Views.Dialogs"
                            xmlns:controls="clr-namespace:Neurotoxin.Godspeed.Presentation.Controls;assembly=Neurotoxin.Godspeed.Presentation"
-                           Title="{Binding TransferProgressDialogMode}" Width="400" WindowStartupLocation="CenterOwner"
+                           Title="{Binding TransferType}" Width="400" WindowStartupLocation="CenterOwner"
                            Style="{StaticResource Dialog}">
     <controls:DialogBase.Resources>
-        <converters:TransferProgressDialogModeConverter x:Key="TransferProgressDialogModeConverter"/>
+        <converters:TransferTypeConverter x:Key="TransferTypeConverter"/>
     </controls:DialogBase.Resources>
     
     <Grid x:Name="LayoutRoot" Margin="10">
@@ -24,7 +24,7 @@
         </Grid.RowDefinitions>
 
         <TextBlock Grid.Row="0" Grid.ColumnSpan="2" Text="{Binding SourceFile}" Margin="0,0,0,5" TextTrimming="CharacterEllipsis" />
-        <DockPanel Grid.Row="1" Grid.ColumnSpan="2" Margin="0,2,0,2" Visibility="{Binding TransferProgressDialogMode, Converter={StaticResource TransferProgressDialogModeConverter}}">
+        <DockPanel Grid.Row="1" Grid.ColumnSpan="2" Margin="0,2,0,2" Visibility="{Binding TransferType, Converter={StaticResource TransferTypeConverter}}">
             <TextBlock DockPanel.Dock="Right" Text="%" Margin="2,0,0,0" />
             <TextBlock DockPanel.Dock="Right" Text="{Binding CurrentFileProgress}" Margin="5,0,0,0" Width="30" TextAlignment="Right" />
             <ProgressBar Minimum="0" Maximum="100" Value="{Binding CurrentFileProgress, Mode=OneWay}"/>
@@ -40,7 +40,7 @@
             <TextBlock Text="{Binding FileCount}"/>
         </StackPanel>
         <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,0,5"
-                    Visibility="{Binding TransferProgressDialogMode, Converter={StaticResource TransferProgressDialogModeConverter}}">
+                    Visibility="{Binding TransferType, Converter={StaticResource TransferTypeConverter}}">
             <TextBlock Text="{Binding Path=BytesTransfered, StringFormat={x:Static dialogs:TransferProgressDialog.BytesFormat}}"/>
             <TextBlock Text=" / "/>
             <TextBlock Text="{Binding Path=TotalBytes, StringFormat={x:Static dialogs:TransferProgressDialog.BytesFormat}}"/>
