--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/TransferProgressDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/TransferProgressDialog.xaml
@@ -4,18 +4,24 @@
                            xmlns:converters="clr-namespace:Neurotoxin.Godspeed.Shell.Converters"
                            xmlns:dialogs="clr-namespace:Neurotoxin.Godspeed.Shell.Views.Dialogs"
                            xmlns:controls="clr-namespace:Neurotoxin.Godspeed.Presentation.Controls;assembly=Neurotoxin.Godspeed.Presentation"
-                           Title="{Binding TransferType}" Width="400" WindowStartupLocation="CenterOwner"
+                           Width="400" WindowStartupLocation="CenterOwner"
                            Style="{StaticResource Dialog}">
+    <controls:DialogBase.TaskbarItemInfo>
+        <TaskbarItemInfo ProgressValue="{Binding TotalProgressDouble}" ProgressState="{Binding ProgressState}"/>
+    </controls:DialogBase.TaskbarItemInfo>
+    <controls:DialogBase.Title>
+        <MultiBinding StringFormat="{x:Static dialogs:TransferProgressDialog.TitleFormat}">
+            <Binding Path="TransferType"/>
+            <Binding Path="TotalProgress"/>
+        </MultiBinding>
+    </controls:DialogBase.Title>
     <controls:DialogBase.Resources>
         <converters:TransferTypeConverter x:Key="TransferTypeConverter"/>
     </controls:DialogBase.Resources>
     
     <Grid x:Name="LayoutRoot" Margin="10">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -23,28 +29,48 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" Grid.ColumnSpan="2" Text="{Binding SourceFile}" Margin="0,0,0,5" TextTrimming="CharacterEllipsis" />
-        <DockPanel Grid.Row="1" Grid.ColumnSpan="2" Margin="0,2,0,2" Visibility="{Binding TransferType, Converter={StaticResource TransferTypeConverter}}">
+        <TextBlock Grid.Row="0" Text="{Binding SourceFile}" Margin="0,0,0,5" TextTrimming="CharacterEllipsis" />
+        <DockPanel Grid.Row="1" Margin="0,2,0,2" Visibility="{Binding TransferType, Converter={StaticResource TransferTypeConverter}}">
             <TextBlock DockPanel.Dock="Right" Text="%" Margin="2,0,0,0" />
             <TextBlock DockPanel.Dock="Right" Text="{Binding CurrentFileProgress}" Margin="5,0,0,0" Width="30" TextAlignment="Right" />
             <ProgressBar Minimum="0" Maximum="100" Value="{Binding CurrentFileProgress, Mode=OneWay}"/>
         </DockPanel>
-        <DockPanel Grid.Row="2" Grid.ColumnSpan="2" Margin="0,2,0,2">
+        <DockPanel Grid.Row="2" Margin="0,2,0,2">
             <TextBlock DockPanel.Dock="Right" Text="%" Margin="2,0,0,0" />
             <TextBlock DockPanel.Dock="Right" Text="{Binding TotalProgress}" Margin="5,0,0,0" Width="30" TextAlignment="Right" />
             <ProgressBar Minimum="0" Maximum="100" Value="{Binding TotalProgress, Mode=OneWay}"/>
         </DockPanel>
-        <StackPanel Grid.Row="3" Grid.Column="0" Orientation="Horizontal" Margin="0,0,0,5">
-            <TextBlock Text="{Binding FilesTransfered}"/>
-            <TextBlock Text=" / "/>
-            <TextBlock Text="{Binding FileCount}"/>
-        </StackPanel>
-        <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,0,5"
-                    Visibility="{Binding TransferType, Converter={StaticResource TransferTypeConverter}}">
-            <TextBlock Text="{Binding Path=BytesTransfered, StringFormat={x:Static dialogs:TransferProgressDialog.BytesFormat}}"/>
-            <TextBlock Text=" / "/>
-            <TextBlock Text="{Binding Path=TotalBytes, StringFormat={x:Static dialogs:TransferProgressDialog.BytesFormat}}"/>
-        </StackPanel>
-        <Button Grid.Row="4" Grid.ColumnSpan="2" HorizontalAlignment="Right" Width="75" Content="Cancel" Click="CancelButtonClick"/>
+        <DockPanel Grid.Row="3" Margin="0,0,0,5">
+            <TextBlock DockPanel.Dock="Left">
+                <TextBlock.Text>
+                    <MultiBinding StringFormat="{x:Static dialogs:TransferProgressDialog.FileCountFormat}">
+                        <Binding Path="FilesTransferred"/>
+                        <Binding Path="FileCount"/>
+                    </MultiBinding>
+                </TextBlock.Text>
+            </TextBlock>
+            <TextBlock HorizontalAlignment="Right" Visibility="{Binding TransferType, Converter={StaticResource TransferTypeConverter}}">
+                <TextBlock.Text>
+                    <MultiBinding StringFormat="{x:Static dialogs:TransferProgressDialog.BytesFormat}">
+                        <Binding Path="BytesTransferred"/>
+                        <Binding Path="TotalBytes"/>
+                    </MultiBinding>
+                </TextBlock.Text>
+            </TextBlock>
+        </DockPanel>
+
+        <DockPanel Grid.Row="4" Margin="0,0,0,5">
+            <TextBlock DockPanel.Dock="Right" Text="{Binding Path=Speed, StringFormat={x:Static dialogs:TransferProgressDialog.SpeedFormat}}"/>
+            <TextBlock>
+                <TextBlock.Text>
+                    <MultiBinding StringFormat="{x:Static dialogs:TransferProgressDialog.TimeFormat}">
+                        <Binding Path="ElapsedTime"/>
+                        <Binding Path="RemainingTime"/>
+                    </MultiBinding>
+                </TextBlock.Text>
+            </TextBlock>
+        </DockPanel>
+
+        <Button Grid.Row="5" HorizontalAlignment="Right" Width="75" Content="Cancel" Click="CancelButtonClick"/>
     </Grid>
 </controls:DialogBase>
